internal class AnimationsString
{
    internal static string isMoving="isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "isJump";
    internal static string attackTrigger = "isAttack";
    internal static string strongAttackTrigger = "isStrongAttack";
    internal static string rangeTrigger = "rangeAttack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string lockVelocity = "lockVelocity";
    internal static string hitTrigger = "hit";
    internal static string attackCooldown = "attackCooldown";
    internal static string rebornCooldown = "rebornCooldown";
    internal static string isDashCD = "isDashCD";
}
